--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Logo</p>
+    <p><img src="/img/green-logo.png" alt="plylam-green-logo"></p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
     <hr>
-    <p>35 days left</p>
   </div>
   <div class="bottomleft">
     <p>Some text</p>
