updated title and text
description and title text updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>PlyLam-Bespoke-Kitchens</title>
+  </head>
 <style>
 body, html {
   height: 100%;
@@ -53,7 +56,7 @@ hr {
     <hr>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <p>Bespoke Kitchens and Cabinets</p>
   </div>
 </div>
 
