--- a/index.html
+++ b/index.html
@@ -9,55 +9,17 @@ body, html {
   margin: 0;
 }
 
-.bgimg {
-  background-image: url('/img/1200x800-wil-01.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
+.logo {   
+  
 }
 
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
-
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
 </style>
 <body>
 
-<div class="bgimg">
-  <div class="topleft">
-    <p><img src="/img/green-logo.png" alt="plylam-green-logo"></p>
-  </div>
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-  </div>
-  <div class="bottomleft">
-    <p>Bespoke Kitchens and Cabinets</p>
-  </div>
+<div class="logo">
+
+    <img src="/img/plylam-logo-circle.png" alt="plylam logo">
+
 </div>
 
 </body>
