--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@ body, html {
   height: 100%;
   margin: 0;
 }
-
+.main-container {   
+  display: flex;
+  justify-content: center;
+}
 .logo {   
   
 }
 
 </style>
 <body>
-
+<div class="main-container">
 <div class="logo">
   
 
@@ -28,6 +31,7 @@ body, html {
     </g>
 </svg>
 
+</div>
 </div>
 
 </body>
