--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@ body, html {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+  color: #038791;
+  font-family: Trebuchet MS;
+  font-size: 300%;
+
+}
+
 .main-container {   
   display: flex;
   justify-content: center;
@@ -19,6 +28,7 @@ body, html {
 </style>
 <body>
 <div class="main-container">
+  <h1>Coming Soon</h1>
 <div class="logo">
   
 
