--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ h1 {
 </style>
 <body>
 <div class="main-container">
-  <h1>Coming Soon</h1>
+  <div>
+    <h1>Coming Soon</h1>
+  </div>
 <div class="logo">
   
 
