--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ h1 {
 .main-container {   
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 .logo {   
-  
+  padding-top: 20px;
 }
 
 </style>
