--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ h1 {
   flex-direction: column;
 }
 .logo {   
-  padding-top: 20px;
+  padding-top: 10px;
+  justify-content: center;
 }
 
 </style>
