--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ body, html {
 
 .main-container {   
   display: flex;
-
   flex-direction: column;
 }
 
 h1 {
+  text-align: center;
   color: #038791;
   font-family: Trebuchet MS;
   font-size: 300%;
@@ -23,6 +23,7 @@ h1 {
 }
 
 .logo {   
+  text-align: center;
   padding-top: 10px;
 }
 
